Modify images paths

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="other-links"><a href="#other links">Other Links</a>
                     <div class="megamenu">
                         <div class="img">
-                            <img src="./imgs/megamenu.png" alt="mega menu">
+                            <img src="imgs/megamenu.png" alt="mega menu">
                         </div>
                         <ul class="group">
                             <li>
@@ -76,7 +76,7 @@
                     Books Iam reading, Games Iam Playing, Stories and Events</p>
             </div>
             <div class="img">
-                <img src="./imgs/landing-image.png" alt="landing image">
+                <img src="imgs/landing-image.png" alt="landing image">
             </div>
         </div>
         <a href="#articles" class="go-down">
@@ -89,7 +89,7 @@
         <h3 class="main-heading">Articles</h3>
         <div class="container">
             <div class="box">
-                <img src="/imgs/cat-01.jpg" alt="cat1 image">
+                <img src=imgs/cat-01.jpg" alt="cat1 image">
                 <div class="text">
                     <h3>Test Title</h3>
                     <p>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="/imgs/cat-02.jpg" alt="cat2 image">
+                <img src="imgs/cat-02.jpg" alt="cat2 image">
                 <div class="text">
                     <h3>Test Title</h3>
                     <p>
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="/imgs/cat-03.jpg" alt="cat3 image">
+                <img src="imgs/cat-03.jpg" alt="cat3 image">
                 <div class="text">
                     <h3>Test Title</h3>
                     <p>
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="/imgs/cat-04.jpg" alt="cat4 image">
+                <img src="imgs/cat-04.jpg" alt="cat4 image">
                 <div class="text">
                     <h3>Test Title</h3>
                     <p>
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="/imgs/cat-05.jpg" alt="cat5 image">
+                <img src="imgs/cat-05.jpg" alt="cat5 image">
                 <div class="text">
                     <h3>Test Title</h3>
                     <p>
@@ -154,7 +154,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="/imgs/cat-06.jpg" alt="cat6 image">
+                <img src="imgs/cat-06.jpg" alt="cat6 image">
                 <div class="text">
                     <h3>Test Title</h3>
                     <p>
@@ -167,7 +167,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="/imgs/cat-07.jpg" alt="cat7 image">
+                <img src="imgs/cat-07.jpg" alt="cat7 image">
                 <div class="text">
                     <h3>Test Title</h3>
                     <p>
@@ -180,7 +180,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="/imgs/cat-08.jpg" alt="cat8 image">
+                <img src="imgs/cat-08.jpg" alt="cat8 image">
                 <div class="text">
                     <h3>Test Title</h3>
                     <p>
@@ -196,38 +196,38 @@
     </section>
     <!-- end articles -->
     <!-- start gallery -->
-     <div class="spikes"></div> <!--جزء الزيجزاج اللى فى اول القسم-->
+    <div class="spikes"></div> <!--جزء الزيجزاج اللى فى اول القسم-->
     <section class="gallery" id="gallery">
         <h3 class="main-heading">gallery</h3>
         <div class="container">
             <div class="image">
                 <div class="img-wrapper">
-                    <img src="/imgs/gallery-01.png" alt="gallery-image1">
+                    <img src="imgs/gallery-01.png" alt="gallery-image1">
                 </div>
             </div>
             <div class="image">
                 <div class="img-wrapper">
-                    <img src="/imgs/gallery-02.png" alt="gallery-image2">
+                    <img src="imgs/gallery-02.png" alt="gallery-image2">
                 </div>
             </div>
             <div class="image">
                 <div class="img-wrapper">
-                    <img src="/imgs/gallery-03.jpg" alt="gallery-image3">
+                    <img src="imgs/gallery-03.jpg" alt="gallery-image3">
                 </div>
             </div>
             <div class="image">
                 <div class="img-wrapper">
-                    <img src="/imgs/gallery-04.png" alt="gallery-image4">
+                    <img src="imgs/gallery-04.png" alt="gallery-image4">
                 </div>
             </div>
             <div class="image">
                 <div class="img-wrapper">
-                    <img src="/imgs/gallery-05.jpg" alt="gallery-image5">
+                    <img src="imgs/gallery-05.jpg" alt="gallery-image5">
                 </div>
             </div>
             <div class="image">
                 <div class="img-wrapper">
-                    <img src="/imgs/gallery-06.png" alt="gallery-image6">
+                    <img src="imgs/gallery-06.png" alt="gallery-image6">
                 </div>
             </div>
 
@@ -241,7 +241,7 @@
         <div class="container">
             <div class="box">
                 <div class="image">
-                    <img src="/imgs/features-01.jpg" alt="features-image1">
+                    <img src="imgs/features-01.jpg" alt="features-image1">
                 </div>
                 <div class="text">
                     <h4>Quality</h4>
@@ -254,7 +254,7 @@
             </div>
             <div class="box">
                 <div class="image">
-                    <img src="/imgs/features-02.jpg" alt="features-image2">
+                    <img src="imgs/features-02.jpg" alt="features-image2">
                 </div>
                 <div class="text">
                     <h4>Time</h4>
@@ -267,7 +267,7 @@
             </div>
             <div class="box">
                 <div class="image">
-                    <img src="/imgs/features-03.jpg" alt="features-image3">
+                    <img src="imgs/features-03.jpg" alt="features-image3">
                 </div>
                 <div class="text">
                     <h4>Passion</h4>
@@ -286,7 +286,7 @@
         <h3 class="main-heading">testimonials</h3>
         <div class="container">
             <div class="box">
-                <img src="/imgs/avatar-01.png" alt="avatar-01">
+                <img src="imgs/avatar-01.png" alt="avatar-01">
                 <h4>Mohamed Farag</h4>
                 <span>Full Stack Developer</span>
                 <div class="stars">
@@ -300,7 +300,7 @@
                     Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
             </div>
             <div class="box">
-                <img src="/imgs/avatar-02.png" alt="avatar-02">
+                <img src="imgs/avatar-02.png" alt="avatar-02">
                 <h4>Mohamed Ibrahim</h4>
                 <span>Full Stack Developer</span>
                 <div class="stars">
@@ -314,7 +314,7 @@
                     Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
             </div>
             <div class="box">
-                <img src="/imgs/avatar-03.png" alt="avatar-03">
+                <img src="imgs/avatar-03.png" alt="avatar-03">
                 <h4>Shady Nabil</h4>
                 <span>Full Stack Developer</span>
                 <div class="stars">
@@ -328,7 +328,7 @@
                     Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
             </div>
             <div class="box">
-                <img src="/imgs/avatar-04.png" alt="avatar-04">
+                <img src="imgs/avatar-04.png" alt="avatar-04">
                 <h4>Amr Hendawy</h4>
                 <span>Full Stack Developer</span>
                 <div class="stars">
@@ -342,7 +342,7 @@
                     Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
             </div>
             <div class="box">
-                <img src="/imgs/avatar-05.png" alt="avatar-05">
+                <img src="imgs/avatar-05.png" alt="avatar-05">
                 <h4>Sherief Ashraf</h4>
                 <span>Full Stack Developer</span>
                 <div class="stars">
@@ -355,8 +355,8 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
             </div>
-             <div class="box">
-                <img src="/imgs/avatar-06.png" alt="avatar-06">
+            <div class="box">
+                <img src="imgs/avatar-06.png" alt="avatar-06">
                 <h4>Ssama Mohamed</h4>
                 <span>Full Stack Developer</span>
                 <div class="stars">
@@ -378,7 +378,7 @@
         <div class="container">
             <div class="box">
                 <div class="content">
-                    <img src="/imgs/team-01.jpg" alt="member photo 1">
+                    <img src="imgs/team-01.jpg" alt="member photo 1">
                     <div class="social">
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -393,7 +393,7 @@
             </div>
               <div class="box">
                 <div class="content">
-                    <img src="/imgs/team-02.jpg" alt="member photo 2">
+                    <img src="imgs/team-02.jpg" alt="member photo 2">
                     <div class="social">
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -408,7 +408,7 @@
             </div>
               <div class="box">
                 <div class="content">
-                    <img src="/imgs/team-03.jpg" alt="member photo 3">
+                    <img src="imgs/team-03.jpg" alt="member photo 3">
                     <div class="social">
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -423,7 +423,7 @@
             </div>
               <div class="box">
                 <div class="content">
-                    <img src="/imgs/team-04.jpg" alt="member photo 4">
+                    <img src="imgs/team-04.jpg" alt="member photo 4">
                     <div class="social">
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -438,7 +438,7 @@
             </div>
               <div class="box">
                 <div class="content">
-                    <img src="/imgs/team-05.png" alt="member photo 5">
+                    <img src="imgs/team-05.png" alt="member photo 5">
                     <div class="social">
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -453,7 +453,7 @@
             </div>
               <div class="box">
                 <div class="content">
-                    <img src="/imgs/team-06.png" alt="member photo 6">
+                    <img src="imgs/team-06.png" alt="member photo 6">
                     <div class="social">
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -468,7 +468,7 @@
             </div>
               <div class="box">
                 <div class="content">
-                    <img src="/imgs/team-07.jpg" alt="member photo 7">
+                    <img src="imgs/team-07.jpg" alt="member photo 7">
                     <div class="social">
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -483,7 +483,7 @@
             </div>
               <div class="box">
                 <div class="content">
-                    <img src="/imgs/team-08.jpg" alt="member photo 8">
+                    <img src="imgs/team-08.jpg" alt="member photo 8">
                     <div class="social">
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -565,7 +565,7 @@
         <section class="our-skills" id="our-skills">
             <h3 class="main-heading">our skills</h3>
             <div class="container">
-                <img src="/imgs/skills.png" alt="">
+                <img src="imgs/skills.png" alt="">
                 <div class="skills">
                     <div class="skill-holder">
                         <h4>HTML<span>80%</span> </h4>
@@ -598,10 +598,10 @@
          <section class="how-it-works" id="how-it-works">
             <h3 class="main-heading">how it works?</h3>
             <div class="container">
-                <img class="main-image" src="/imgs/work-steps.png" alt="">
+                <img class="main-image" src="imgs/work-steps.png" alt="">
                 <div class="steps">
                     <div class="step">
-                        <img src="/imgs/work-steps-1.png" alt="">
+                        <img src="imgs/work-steps-1.png" alt="">
                         <div class="text">
                             <h4>Business Analysis</h4>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
@@ -609,7 +609,7 @@
                         </div>
                     </div>
                     <div class="step">
-                        <img src="/imgs/work-steps-2.png" alt="">
+                        <img src="imgs/work-steps-2.png" alt="">
                         <div class="text">
                             <h4>Architecture</h4>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
@@ -617,7 +617,7 @@
                         </div>
                     </div>
                     <div class="step">
-                        <img src="/imgs/work-steps-3.png" alt="">
+                        <img src="imgs/work-steps-3.png" alt="">
                         <div class="text">
                             <h4>Developement</h4>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
@@ -632,7 +632,7 @@
          <section class="events" id="events">
              <h3 class="main-heading">latest events</h3>
              <div class="container">
-                <img src="/imgs/events.png" alt="">
+                <img src="imgs/events.png" alt="">
                 <div class="content">
                     <div class="time">
                         <div class="box">
@@ -690,7 +690,7 @@
              <div class="container">
                 <div class="box">
                         <div class="title">Basic</div>
-                        <img decoding="async" src="/imgs/hosting-basic.png" alt="">
+                        <img decoding="async" src="imgs/hosting-basic.png" alt="">
                         <div class="price">
                           <span class="money">$15</span>
                           <span>Per Month</span>
@@ -707,7 +707,7 @@
                 <div class="box ">
                         <div class="most-popular">Most popular</div>
                         <div class="title">Advanced</div>
-                        <img decoding="async" src="/imgs/hosting-advanced.png" alt="">
+                        <img decoding="async" src="imgs/hosting-advanced.png" alt="">
                         <div class="price">
                           <span class="money">$15</span>
                           <span>Per Month</span>
@@ -723,7 +723,7 @@
                 </div>
                 <div class="box">
                         <div class="title">Professional</div>
-                        <img decoding="async" src="/imgs/hosting-professional.png" alt="">
+                        <img decoding="async" src="imgs/hosting-professional.png" alt="">
                         <div class="price">
                           <span class="money">$45</span>
                           <span>Per Month</span>
@@ -759,7 +759,7 @@
                 </ul>
                 </div>
                 <div class="video">
-                    <img src="/imgs/video-preview.jpg" alt="">
+                    <img src="imgs/video-preview.jpg" alt="">
                     <p>Everything About The Virtual Hosts</p>
                 </div>
              </div>
@@ -802,7 +802,7 @@
                         recusandae ratione provident necessitatibus,
                         cumque delectus commodi fuga praesentium beatae.
                         Totam vel similique laborum dicta aperiam odit doloribus corporis.</p>
-                    <img src="/imgs/discount.png" alt="">
+                    <img src="imgs/discount.png" alt="">
                 </div>
                 </div>
                     <div class="form">
@@ -850,12 +850,12 @@
                     </div>
                 </div>
                 <div class="images">
-                    <img src="/imgs/gallery-01.png" alt="">
-                    <img src="/imgs/gallery-02.png" alt="">
-                    <img src="/imgs/gallery-03.jpg" alt="">
-                    <img src="/imgs/gallery-04.png" alt="">
-                    <img src="/imgs/gallery-05.jpg" alt="">
-                    <img src="/imgs/gallery-06.png" alt="">
+                    <img src="imgs/gallery-01.png" alt="">
+                    <img src="imgs/gallery-02.png" alt="">
+                    <img src="imgs/gallery-03.jpg" alt="">
+                    <img src="imgs/gallery-04.png" alt="">
+                    <img src="imgs/gallery-05.jpg" alt="">
+                    <img src="imgs/gallery-06.png" alt="">
                 </div>
                 </div>
                 <hr>
